k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app
  namespace: nodejs-app-namespace
spec:
  selector:
    app: nodejs-app  
  ports:
    - protocol: TCP
      port: 80  
      targetPort: 3000
