k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-app-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/load-balancer-name: "nodejs-app-alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip  
    # alb.ingress.kubernetes.io/tags: "Name=my-eks-cluster"
    # alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-port: "80"  
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "43"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "40"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/healthy-threshold-count: "3"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "3"
    alb.ingress.kubernetes.io/subnets: "subnet-0eb49d0e939a675e0,subnet-0b8afd2b66adcdf52"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]' 
    # alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:241533137992:certificate/11f947fe-d73d-4bcb-91e6-4d387ed818a4"
# 
spec:
  ingressClassName: alb
  rules:
    - host: nodejs-app-alb-1834078864.us-east-1.elb.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejs-app
                port:
                  number: 80
